--- a/spring-boot-module/db-mysql/pom.xml
+++ b/spring-boot-module/db-mysql/pom.xml
@@ -28,5 +28,10 @@
             <version>8.4.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
 </project>
